# server/resources_api/routes.py
@@ -1,6 +1,6 @@
 from resources_api.users import UserRes, UsersAllRes, UserWithUniversityRed
 from resources_api.universities import UniversityPagination, UniversityRes,  UniversityWithInfoRes, UniversityAllRes
-from resources_api.reveiw_section import ReviewRes
+from resources_api.review_section import ReviewRes, ReviewPerUniRes
 
 def initialize_routes(api):
     # register the resource at a certain route
@@ -16,3 +16,4 @@ def initialize_routes(api):
     api.add_resource(UniversityPagination, "/api/universities/search")
     # Reviews
     api.add_resource(ReviewRes, "/api/review")
+    api.add_resource(ReviewPerUniRes, "/api/reviews/<string:university_id>")
